--- a/_config.yml
+++ b/_config.yml
@@ -18,19 +18,20 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Kini's Blog
-email: your-email@example.com
+title: Kini Talks
+discord: kini#4572
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
+  My personal gaming blog where I talk about random things
+baseurl: "/kini" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
 github_username:  kinilune
+
+github_url: https://github.com/kinilune
 
 # Theme
 remote_theme: fongandrew/hydeout
+
+sidebar_home_link: true
 
 # Build settings
 
