--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Kini Talks
 discord: kini#4572
 description: >- # this means to ignore newlines until "baseurl:"
   My personal gaming blog where I talk about random things
-baseurl: "/kini" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  kinilune
 
