--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,12 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  kinilune
+markdown: kramdown
 
 github_url: https://github.com/kinilune
 
 # Theme
-remote_theme: fongandrew/hydeout
+remote_theme: erikh/hydeout
 
 sidebar_home_link: true
 
